fixes trix editor bullets and enum not showing up

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,6 @@
  *= require_tree .
  *= require_self
  */
+
+ trix-editor ul { list-style-type: disc !important; margin-left: 1rem !important; }
+ trix-editor ol { list-style-type: decimal !important; margin-left: 1rem !important; }
